[package]
name = "ones-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
md-5 = "0.10.5"
thiserror = "1.0.40"
lazy_static = "1.4.0"
url = "2.3.1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
httpmock = "0.6.7"